$Id$

You are looking at a CVS snapshot of the REL_1_2 branch.

Version 1.2-b2 (?? Feb 2007)
 - Added new 'Security Audit' page.
 - Fixed bug: external users with no email address get squished into a single
   user on second edit
 - Fixed bug: use strpos instead of stripos for PHP4 compatibility

Version 1.2-b1 (25 Feb 2007)
 - Apply [ 1900716 ] themes not sticking if auth_http true
 - Apply PATCH [ 1900714 ] User Custom Headers Patch
 - Add option to include iCalendar attachment to emails for both
   reminders and notifications
 - Apply PATCH [ 1878056 ] Call toggle_datefields() JavaScript function with onClick
 - Apply PATCH [ 1894150 ] corrections to 'translations/Italian.txt'
 - Fix bug [ 1844751 ] Events on Sundays not displayed in DayByTime view
   (thanks neufeind)
 - Fix bug [ 1882034 ] weekly repeat not showing in first week of some months
   (thanks neufeind)
 - Apply patch [ 1895173 ] Fix for reminder-format
 - Fix bug [ 1893997 ] iCal export from Outlook over https (thanks neufeind)
 - Fix bug: not auth for certain events where public is participant
 - Fix bug: 'Remote Calendar' menu link not brining up correct tab on page
 - Fix bug: single quote in nonuser name causes JS error
 - Fix bug [ 1851371 ] Notification not sent on description change
 - Fix bug [ 1839882 ] help/guide pages blocked (non auth)
 - Fix bug [ 1851209 ] advanced search doesn't show on public calendar
 - Fix bug [ 1814525 ] Repeating event deletion
 - Apply PATCH [ 1802793 ] iCS export - LDAP - Empty Attendee's info
 - Security fix 1826571: misc XSS issues
 - Fix bug [ 1881030 ] date-format wrong in month.php
 - Modified iCalendar output to correct ATTENDEE output to conform to
   RFC2445; fixed attendee to user login if no fullname info available.
 - Modified iCalendar output to avoid bug in Sunbird 0.7.
 - Fix bug [ 1851220 ] cannot enter multiple categories.. only first one is kept
 - Added new rss_unapproved.php that will generate RSS 2.0 listing
   of unapproved events.